// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Compiler compile() compiles base config 1`] = `
"// Auto-generated by Aesthetic. Do not modify!
import { Design } from '@aesthetic/core';

export default new Design('example', {
  border: {
    sm: {
      radius: '0.14rem',
      width: '0.04rem',
    },
    df: {
      radius: '0.21rem',
      width: '0.07rem',
    },
    lg: {
      radius: '0.32rem',
      width: '0.14rem',
    },
  },
  breakpoint: {
    xs: {
      query: '(min-width: 45.71em)',
      querySize: 640,
      rootLineHeight: 1.33,
      rootTextSize: '14.94px',
    },
    sm: {
      query: '(min-width: 68.57em)',
      querySize: 960,
      rootLineHeight: 1.42,
      rootTextSize: '15.94px',
    },
    md: {
      query: '(min-width: 91.43em)',
      querySize: 1280,
      rootLineHeight: 1.52,
      rootTextSize: '17.01px',
    },
    lg: {
      query: '(min-width: 114.29em)',
      querySize: 1600,
      rootLineHeight: 1.62,
      rootTextSize: '18.15px',
    },
    xl: {
      query: '(min-width: 137.14em)',
      querySize: 1920,
      rootLineHeight: 1.73,
      rootTextSize: '19.36px',
    },
  },
  heading: {
    l1: {
      letterSpacing: '0.25px',
      lineHeight: 1.5,
      size: '1.14rem',
    },
    l2: {
      letterSpacing: '0.33px',
      lineHeight: 1.69,
      size: '1.43rem',
    },
    l3: {
      letterSpacing: '0.44px',
      lineHeight: 1.9,
      size: '1.79rem',
    },
    l4: {
      letterSpacing: '0.59px',
      lineHeight: 2.14,
      size: '2.23rem',
    },
    l5: {
      letterSpacing: '0.79px',
      lineHeight: 2.4,
      size: '2.79rem',
    },
    l6: {
      letterSpacing: '1.05px',
      lineHeight: 2.7,
      size: '3.49rem',
    },
  },
  shadow: {
    xs: {
      x: '0rem',
      y: '0.14rem',
      blur: '0.14rem',
      spread: '0rem',
    },
    sm: {
      x: '0rem',
      y: '0.23rem',
      blur: '0.25rem',
      spread: '0rem',
    },
    md: {
      x: '0rem',
      y: '0.37rem',
      blur: '0.44rem',
      spread: '0rem',
    },
    lg: {
      x: '0rem',
      y: '0.61rem',
      blur: '0.77rem',
      spread: '0rem',
    },
    xl: {
      x: '0rem',
      y: '0.98rem',
      blur: '1.34rem',
      spread: '0rem',
    },
  },
  spacing: {
    xs: '0.31rem',
    sm: '0.63rem',
    df: '1.25rem',
    md: '2.50rem',
    lg: '3.75rem',
    xl: '5rem',
    type: 'vertical-rhythm',
    unit: 17.5,
  },
  text: {
    sm: {
      lineHeight: 1.25,
      size: '0.89rem',
    },
    df: {
      lineHeight: 1.25,
      size: '1rem',
    },
    lg: {
      lineHeight: 1.25,
      size: '1.13rem',
    },
  },
  typography: {
    font: {
      heading:
        'system-ui, -apple-system, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, Helvetica, Arial, sans-serif, \\"Apple Color Emoji\\", \\"Segoe UI Emoji\\", \\"Segoe UI Symbol\\"',
      locale: {},
      monospace: '\\"Lucida Console\\", Monaco, monospace',
      text:
        'system-ui, -apple-system, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, Helvetica, Arial, sans-serif, \\"Apple Color Emoji\\", \\"Segoe UI Emoji\\", \\"Segoe UI Symbol\\"',
      system:
        'system-ui, -apple-system, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, Helvetica, Arial, sans-serif, \\"Apple Color Emoji\\", \\"Segoe UI Emoji\\", \\"Segoe UI Symbol\\"',
    },
    rootLineHeight: 1.25,
    rootTextSize: '14px',
  },
});
"
`;

exports[`Compiler compile() compiles base config 2`] = `
"// Auto-generated by Aesthetic. Do not modify!
import design from '../example';

export default design.createTheme(
  {
    contrast: 'normal',
    scheme: 'light',
  },
  {
    palette: {
      brand: {
        color: {
          '10': '#000',
          '20': '#000',
          '30': '#000',
          '40': '#000',
          '50': '#000',
          '60': '#000',
          '70': '#000',
          '80': '#000',
          '90': '#000',
          '00': '#000',
        },
        bg: { base: '#000', disabled: '#000', focused: '#000', hovered: '#000', selected: '#000' },
        fg: { base: '#000', disabled: '#000', focused: '#000', hovered: '#000', selected: '#000' },
      },
      primary: {
        color: {
          '10': '#000',
          '20': '#000',
          '30': '#000',
          '40': '#000',
          '50': '#000',
          '60': '#000',
          '70': '#000',
          '80': '#000',
          '90': '#000',
          '00': '#000',
        },
        bg: { base: '#000', disabled: '#000', focused: '#000', hovered: '#000', selected: '#000' },
        fg: { base: '#000', disabled: '#000', focused: '#000', hovered: '#000', selected: '#000' },
      },
      secondary: {
        color: {
          '10': '#000',
          '20': '#000',
          '30': '#000',
          '40': '#000',
          '50': '#000',
          '60': '#000',
          '70': '#000',
          '80': '#000',
          '90': '#000',
          '00': '#000',
        },
        bg: { base: '#000', disabled: '#000', focused: '#000', hovered: '#000', selected: '#000' },
        fg: { base: '#000', disabled: '#000', focused: '#000', hovered: '#000', selected: '#000' },
      },
      tertiary: {
        color: {
          '10': '#000',
          '20': '#000',
          '30': '#000',
          '40': '#000',
          '50': '#000',
          '60': '#000',
          '70': '#000',
          '80': '#000',
          '90': '#000',
          '00': '#000',
        },
        bg: { base: '#000', disabled: '#000', focused: '#000', hovered: '#000', selected: '#000' },
        fg: { base: '#000', disabled: '#000', focused: '#000', hovered: '#000', selected: '#000' },
      },
      neutral: {
        color: {
          '10': '#000',
          '20': '#000',
          '30': '#000',
          '40': '#000',
          '50': '#000',
          '60': '#000',
          '70': '#000',
          '80': '#000',
          '90': '#000',
          '00': '#000',
        },
        bg: { base: '#000', disabled: '#000', focused: '#000', hovered: '#000', selected: '#000' },
        fg: { base: '#000', disabled: '#000', focused: '#000', hovered: '#000', selected: '#000' },
      },
      muted: {
        color: {
          '10': '#000',
          '20': '#000',
          '30': '#000',
          '40': '#000',
          '50': '#000',
          '60': '#000',
          '70': '#000',
          '80': '#000',
          '90': '#000',
          '00': '#000',
        },
        bg: { base: '#000', disabled: '#000', focused: '#000', hovered: '#000', selected: '#000' },
        fg: { base: '#000', disabled: '#000', focused: '#000', hovered: '#000', selected: '#000' },
      },
      info: {
        color: {
          '10': '#000',
          '20': '#000',
          '30': '#000',
          '40': '#000',
          '50': '#000',
          '60': '#000',
          '70': '#000',
          '80': '#000',
          '90': '#000',
          '00': '#000',
        },
        bg: { base: '#000', disabled: '#000', focused: '#000', hovered: '#000', selected: '#000' },
        fg: { base: '#000', disabled: '#000', focused: '#000', hovered: '#000', selected: '#000' },
      },
      warning: {
        color: {
          '10': '#000',
          '20': '#000',
          '30': '#000',
          '40': '#000',
          '50': '#000',
          '60': '#000',
          '70': '#000',
          '80': '#000',
          '90': '#000',
          '00': '#000',
        },
        bg: { base: '#000', disabled: '#000', focused: '#000', hovered: '#000', selected: '#000' },
        fg: { base: '#000', disabled: '#000', focused: '#000', hovered: '#000', selected: '#000' },
      },
      danger: {
        color: {
          '10': '#000',
          '20': '#000',
          '30': '#000',
          '40': '#000',
          '50': '#000',
          '60': '#000',
          '70': '#000',
          '80': '#000',
          '90': '#000',
          '00': '#000',
        },
        bg: { base: '#000', disabled: '#000', focused: '#000', hovered: '#000', selected: '#000' },
        fg: { base: '#000', disabled: '#000', focused: '#000', hovered: '#000', selected: '#000' },
      },
      success: {
        color: {
          '10': '#000',
          '20': '#000',
          '30': '#000',
          '40': '#000',
          '50': '#000',
          '60': '#000',
          '70': '#000',
          '80': '#000',
          '90': '#000',
          '00': '#000',
        },
        bg: { base: '#000', disabled: '#000', focused: '#000', hovered: '#000', selected: '#000' },
        fg: { base: '#000', disabled: '#000', focused: '#000', hovered: '#000', selected: '#000' },
      },
    },
  },
);
"
`;

exports[`Compiler compile() compiles fonts 1`] = `
"// Auto-generated by Aesthetic. Do not modify!
import { Design } from '@aesthetic/core';

export default new Design('test', {
  border: {
    sm: {
      radius: '0.14rem',
      width: '0.04rem',
    },
    df: {
      radius: '0.21rem',
      width: '0.07rem',
    },
    lg: {
      radius: '0.32rem',
      width: '0.14rem',
    },
  },
  breakpoint: {
    xs: {
      query: '(min-width: 45.71em)',
      querySize: 640,
      rootLineHeight: 1.33,
      rootTextSize: '14.94px',
    },
    sm: {
      query: '(min-width: 68.57em)',
      querySize: 960,
      rootLineHeight: 1.42,
      rootTextSize: '15.94px',
    },
    md: {
      query: '(min-width: 91.43em)',
      querySize: 1280,
      rootLineHeight: 1.52,
      rootTextSize: '17.01px',
    },
    lg: {
      query: '(min-width: 114.29em)',
      querySize: 1600,
      rootLineHeight: 1.62,
      rootTextSize: '18.15px',
    },
    xl: {
      query: '(min-width: 137.14em)',
      querySize: 1920,
      rootLineHeight: 1.73,
      rootTextSize: '19.36px',
    },
  },
  heading: {
    l1: {
      letterSpacing: '0.25px',
      lineHeight: 1.5,
      size: '1.14rem',
    },
    l2: {
      letterSpacing: '0.33px',
      lineHeight: 1.69,
      size: '1.43rem',
    },
    l3: {
      letterSpacing: '0.44px',
      lineHeight: 1.9,
      size: '1.79rem',
    },
    l4: {
      letterSpacing: '0.59px',
      lineHeight: 2.14,
      size: '2.23rem',
    },
    l5: {
      letterSpacing: '0.79px',
      lineHeight: 2.4,
      size: '2.79rem',
    },
    l6: {
      letterSpacing: '1.05px',
      lineHeight: 2.7,
      size: '3.49rem',
    },
  },
  shadow: {
    xs: {
      x: '0rem',
      y: '0.14rem',
      blur: '0.14rem',
      spread: '0rem',
    },
    sm: {
      x: '0rem',
      y: '0.23rem',
      blur: '0.25rem',
      spread: '0rem',
    },
    md: {
      x: '0rem',
      y: '0.37rem',
      blur: '0.44rem',
      spread: '0rem',
    },
    lg: {
      x: '0rem',
      y: '0.61rem',
      blur: '0.77rem',
      spread: '0rem',
    },
    xl: {
      x: '0rem',
      y: '0.98rem',
      blur: '1.34rem',
      spread: '0rem',
    },
  },
  spacing: {
    xs: '0.31rem',
    sm: '0.63rem',
    df: '1.25rem',
    md: '2.50rem',
    lg: '3.75rem',
    xl: '5rem',
    type: 'vertical-rhythm',
    unit: 17.5,
  },
  text: {
    sm: {
      lineHeight: 1.25,
      size: '0.89rem',
    },
    df: {
      lineHeight: 1.25,
      size: '1rem',
    },
    lg: {
      lineHeight: 1.25,
      size: '1.13rem',
    },
  },
  typography: {
    font: {
      heading: 'Droid, sans-serif',
      locale: {
        ja_JP: 'YuGothic, \\"Meiryo UI\\", Meiryo, Osaka, Tahoma, Arial, sans-serif',
        th_TH: '\\"Leelawadee UI Regular\\", \\"Kmer UI\\", Tahoma, Arial, sans-serif',
      },
      monospace: '\\"Lucida Console\\", Monaco, monospace',
      text: 'Roboto, sans-serif',
      system:
        'system-ui, -apple-system, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, Helvetica, Arial, sans-serif, \\"Apple Color Emoji\\", \\"Segoe UI Emoji\\", \\"Segoe UI Symbol\\"',
    },
    rootLineHeight: 1.25,
    rootTextSize: '14px',
  },
});
"
`;

exports[`Compiler compile() compiles fonts 2`] = `
"// Auto-generated by Aesthetic. Do not modify!
import design from '../test';

export default design.createTheme(
  {
    contrast: 'normal',
    scheme: 'light',
  },
  {
    palette: {
      brand: {
        color: {
          '10': '#000',
          '20': '#000',
          '30': '#000',
          '40': '#000',
          '50': '#000',
          '60': '#000',
          '70': '#000',
          '80': '#000',
          '90': '#000',
          '00': '#000',
        },
        bg: { base: '#000', disabled: '#000', focused: '#000', hovered: '#000', selected: '#000' },
        fg: { base: '#000', disabled: '#000', focused: '#000', hovered: '#000', selected: '#000' },
      },
      primary: {
        color: {
          '10': '#000',
          '20': '#000',
          '30': '#000',
          '40': '#000',
          '50': '#000',
          '60': '#000',
          '70': '#000',
          '80': '#000',
          '90': '#000',
          '00': '#000',
        },
        bg: { base: '#000', disabled: '#000', focused: '#000', hovered: '#000', selected: '#000' },
        fg: { base: '#000', disabled: '#000', focused: '#000', hovered: '#000', selected: '#000' },
      },
      secondary: {
        color: {
          '10': '#000',
          '20': '#000',
          '30': '#000',
          '40': '#000',
          '50': '#000',
          '60': '#000',
          '70': '#000',
          '80': '#000',
          '90': '#000',
          '00': '#000',
        },
        bg: { base: '#000', disabled: '#000', focused: '#000', hovered: '#000', selected: '#000' },
        fg: { base: '#000', disabled: '#000', focused: '#000', hovered: '#000', selected: '#000' },
      },
      tertiary: {
        color: {
          '10': '#000',
          '20': '#000',
          '30': '#000',
          '40': '#000',
          '50': '#000',
          '60': '#000',
          '70': '#000',
          '80': '#000',
          '90': '#000',
          '00': '#000',
        },
        bg: { base: '#000', disabled: '#000', focused: '#000', hovered: '#000', selected: '#000' },
        fg: { base: '#000', disabled: '#000', focused: '#000', hovered: '#000', selected: '#000' },
      },
      neutral: {
        color: {
          '10': '#000',
          '20': '#000',
          '30': '#000',
          '40': '#000',
          '50': '#000',
          '60': '#000',
          '70': '#000',
          '80': '#000',
          '90': '#000',
          '00': '#000',
        },
        bg: { base: '#000', disabled: '#000', focused: '#000', hovered: '#000', selected: '#000' },
        fg: { base: '#000', disabled: '#000', focused: '#000', hovered: '#000', selected: '#000' },
      },
      muted: {
        color: {
          '10': '#000',
          '20': '#000',
          '30': '#000',
          '40': '#000',
          '50': '#000',
          '60': '#000',
          '70': '#000',
          '80': '#000',
          '90': '#000',
          '00': '#000',
        },
        bg: { base: '#000', disabled: '#000', focused: '#000', hovered: '#000', selected: '#000' },
        fg: { base: '#000', disabled: '#000', focused: '#000', hovered: '#000', selected: '#000' },
      },
      info: {
        color: {
          '10': '#000',
          '20': '#000',
          '30': '#000',
          '40': '#000',
          '50': '#000',
          '60': '#000',
          '70': '#000',
          '80': '#000',
          '90': '#000',
          '00': '#000',
        },
        bg: { base: '#000', disabled: '#000', focused: '#000', hovered: '#000', selected: '#000' },
        fg: { base: '#000', disabled: '#000', focused: '#000', hovered: '#000', selected: '#000' },
      },
      warning: {
        color: {
          '10': '#000',
          '20': '#000',
          '30': '#000',
          '40': '#000',
          '50': '#000',
          '60': '#000',
          '70': '#000',
          '80': '#000',
          '90': '#000',
          '00': '#000',
        },
        bg: { base: '#000', disabled: '#000', focused: '#000', hovered: '#000', selected: '#000' },
        fg: { base: '#000', disabled: '#000', focused: '#000', hovered: '#000', selected: '#000' },
      },
      danger: {
        color: {
          '10': '#000',
          '20': '#000',
          '30': '#000',
          '40': '#000',
          '50': '#000',
          '60': '#000',
          '70': '#000',
          '80': '#000',
          '90': '#000',
          '00': '#000',
        },
        bg: { base: '#000', disabled: '#000', focused: '#000', hovered: '#000', selected: '#000' },
        fg: { base: '#000', disabled: '#000', focused: '#000', hovered: '#000', selected: '#000' },
      },
      success: {
        color: {
          '10': '#000',
          '20': '#000',
          '30': '#000',
          '40': '#000',
          '50': '#000',
          '60': '#000',
          '70': '#000',
          '80': '#000',
          '90': '#000',
          '00': '#000',
        },
        bg: { base: '#000', disabled: '#000', focused: '#000', hovered: '#000', selected: '#000' },
        fg: { base: '#000', disabled: '#000', focused: '#000', hovered: '#000', selected: '#000' },
      },
    },
  },
);
"
`;

exports[`Compiler compile() compiles multiple themes 1`] = `
"// Auto-generated by Aesthetic. Do not modify!
import { Design } from '@aesthetic/core';

export default new Design('test', {
  border: {
    sm: {
      radius: '0.16rem',
      width: '0.07rem',
    },
    df: {
      radius: '0.21rem',
      width: '0.07rem',
    },
    lg: {
      radius: '0.29rem',
      width: '0.07rem',
    },
  },
  breakpoint: {
    xs: {
      query: '(min-width: 45.71em)',
      querySize: 640,
      rootLineHeight: 1.33,
      rootTextSize: '14.94px',
    },
    sm: {
      query: '(min-width: 68.57em)',
      querySize: 960,
      rootLineHeight: 1.42,
      rootTextSize: '15.94px',
    },
    md: {
      query: '(min-width: 91.43em)',
      querySize: 1280,
      rootLineHeight: 1.52,
      rootTextSize: '17.01px',
    },
    lg: {
      query: '(min-width: 114.29em)',
      querySize: 1600,
      rootLineHeight: 1.62,
      rootTextSize: '18.15px',
    },
    xl: {
      query: '(min-width: 137.14em)',
      querySize: 1920,
      rootLineHeight: 1.73,
      rootTextSize: '19.36px',
    },
  },
  heading: {
    l1: {
      letterSpacing: '0.25px',
      lineHeight: 1.5,
      size: '1.14rem',
    },
    l2: {
      letterSpacing: '0.33px',
      lineHeight: 1.69,
      size: '1.43rem',
    },
    l3: {
      letterSpacing: '0.44px',
      lineHeight: 1.9,
      size: '1.79rem',
    },
    l4: {
      letterSpacing: '0.59px',
      lineHeight: 2.14,
      size: '2.23rem',
    },
    l5: {
      letterSpacing: '0.79px',
      lineHeight: 2.4,
      size: '2.79rem',
    },
    l6: {
      letterSpacing: '1.05px',
      lineHeight: 2.7,
      size: '3.49rem',
    },
  },
  shadow: {
    xs: {
      x: '0rem',
      y: '0.07rem',
      blur: '0.14rem',
      spread: '0rem',
    },
    sm: {
      x: '0rem',
      y: '0.12rem',
      blur: '0.25rem',
      spread: '0rem',
    },
    md: {
      x: '0rem',
      y: '0.19rem',
      blur: '0.44rem',
      spread: '0rem',
    },
    lg: {
      x: '0rem',
      y: '0.30rem',
      blur: '0.77rem',
      spread: '0rem',
    },
    xl: {
      x: '0rem',
      y: '0.49rem',
      blur: '1.34rem',
      spread: '0rem',
    },
  },
  spacing: {
    xs: '0.31rem',
    sm: '0.63rem',
    df: '1.25rem',
    md: '2.50rem',
    lg: '3.75rem',
    xl: '5rem',
    type: 'vertical-rhythm',
    unit: 17.5,
  },
  text: {
    sm: {
      lineHeight: 1.25,
      size: '0.89rem',
    },
    df: {
      lineHeight: 1.25,
      size: '1rem',
    },
    lg: {
      lineHeight: 1.25,
      size: '1.13rem',
    },
  },
  typography: {
    font: {
      heading:
        'system-ui, -apple-system, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, Helvetica, Arial, sans-serif, \\"Apple Color Emoji\\", \\"Segoe UI Emoji\\", \\"Segoe UI Symbol\\"',
      locale: {},
      monospace: '\\"Lucida Console\\", Monaco, monospace',
      text:
        'system-ui, -apple-system, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, Helvetica, Arial, sans-serif, \\"Apple Color Emoji\\", \\"Segoe UI Emoji\\", \\"Segoe UI Symbol\\"',
      system:
        'system-ui, -apple-system, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, Helvetica, Arial, sans-serif, \\"Apple Color Emoji\\", \\"Segoe UI Emoji\\", \\"Segoe UI Symbol\\"',
    },
    rootLineHeight: 1.25,
    rootTextSize: '14px',
  },
});
"
`;

exports[`Compiler compile() compiles multiple themes 2`] = `
"// Auto-generated by Aesthetic. Do not modify!
import design from '../test';

export default design.createTheme(
  {
    contrast: 'normal',
    scheme: 'light',
  },
  {
    palette: {
      brand: {
        color: {
          '10': '#001',
          '20': '#002',
          '30': '#003',
          '40': '#004',
          '50': '#005',
          '60': '#006',
          '70': '#007',
          '80': '#008',
          '90': '#009',
          '00': '#000',
        },
        bg: { base: '#004', disabled: '#003', focused: '#005', hovered: '#006', selected: '#005' },
        fg: { base: '#004', disabled: '#003', focused: '#005', hovered: '#006', selected: '#005' },
      },
      primary: {
        color: {
          '10': '#FF1',
          '20': '#FF2',
          '30': '#FF3',
          '40': '#FF4',
          '50': '#FF5',
          '60': '#FF6',
          '70': '#FF7',
          '80': '#FF8',
          '90': '#FF9',
          '00': '#FF0',
        },
        bg: { base: '#FF0', disabled: '#FF1', focused: '#FF5', hovered: '#FF2', selected: '#FF5' },
        fg: { base: '#FF9', disabled: '#FF4', focused: '#FF8', hovered: '#FF7', selected: '#FF7' },
      },
      secondary: {
        color: {
          '10': '#ED1',
          '20': '#ED2',
          '30': '#ED3',
          '40': '#ED4',
          '50': '#ED5',
          '60': '#ED6',
          '70': '#ED7',
          '80': '#ED8',
          '90': '#ED9',
          '00': '#ED0',
        },
        bg: { base: '#ED4', disabled: '#ED3', focused: '#ED5', hovered: '#ED6', selected: '#ED5' },
        fg: { base: '#ED4', disabled: '#ED3', focused: '#ED5', hovered: '#ED6', selected: '#ED5' },
      },
      tertiary: {
        color: {
          '10': '#BE1',
          '20': '#BE2',
          '30': '#BE3',
          '40': '#BE4',
          '50': '#BE5',
          '60': '#BE6',
          '70': '#BE7',
          '80': '#BE8',
          '90': '#BE9',
          '00': '#BE0',
        },
        bg: { base: '#BE4', disabled: '#BE3', focused: '#BE5', hovered: '#BE6', selected: '#BE5' },
        fg: { base: '#BE4', disabled: '#BE3', focused: '#BE5', hovered: '#BE6', selected: '#BE5' },
      },
      neutral: {
        color: {
          '10': '#EE1',
          '20': '#EE2',
          '30': '#EE3',
          '40': '#EE4',
          '50': '#EE5',
          '60': '#EE6',
          '70': '#EE7',
          '80': '#EE8',
          '90': '#EE9',
          '00': '#EE0',
        },
        bg: { base: '#EE4', disabled: '#EE3', focused: '#EE5', hovered: '#EE6', selected: '#EE5' },
        fg: { base: '#EE0', disabled: '#EE1', focused: '#EE2', hovered: '#EE3', selected: '#EE4' },
      },
      muted: {
        color: {
          '10': '#001',
          '20': '#002',
          '30': '#003',
          '40': '#004',
          '50': '#005',
          '60': '#006',
          '70': '#007',
          '80': '#008',
          '90': '#009',
          '00': '#000',
        },
        bg: { base: '#004', disabled: '#003', focused: '#005', hovered: '#006', selected: '#005' },
        fg: { base: '#004', disabled: '#003', focused: '#005', hovered: '#006', selected: '#005' },
      },
      info: {
        color: {
          '10': '#FF1',
          '20': '#FF2',
          '30': '#FF3',
          '40': '#FF4',
          '50': '#FF5',
          '60': '#FF6',
          '70': '#FF7',
          '80': '#FF8',
          '90': '#FF9',
          '00': '#FF0',
        },
        bg: { base: '#FF4', disabled: '#FF3', focused: '#FF5', hovered: '#FF6', selected: '#FF5' },
        fg: { base: '#FF4', disabled: '#FF3', focused: '#FF5', hovered: '#FF6', selected: '#FF5' },
      },
      warning: {
        color: {
          '10': '#ED1',
          '20': '#ED2',
          '30': '#ED3',
          '40': '#ED4',
          '50': '#ED5',
          '60': '#ED6',
          '70': '#ED7',
          '80': '#ED8',
          '90': '#ED9',
          '00': '#ED0',
        },
        bg: { base: '#ED9', disabled: '#ED9', focused: '#ED9', hovered: '#ED9', selected: '#ED9' },
        fg: { base: '#ED5', disabled: '#ED4', focused: '#ED6', hovered: '#ED7', selected: '#ED6' },
      },
      danger: {
        color: {
          '10': '#BE1',
          '20': '#BE2',
          '30': '#BE3',
          '40': '#BE4',
          '50': '#BE5',
          '60': '#BE6',
          '70': '#BE7',
          '80': '#BE8',
          '90': '#BE9',
          '00': '#BE0',
        },
        bg: { base: '#BE4', disabled: '#BE3', focused: '#BE5', hovered: '#BE6', selected: '#BE5' },
        fg: { base: '#BE4', disabled: '#BE3', focused: '#BE5', hovered: '#BE6', selected: '#BE5' },
      },
      success: {
        color: {
          '10': '#EE1',
          '20': '#EE2',
          '30': '#EE3',
          '40': '#EE4',
          '50': '#EE5',
          '60': '#EE6',
          '70': '#EE7',
          '80': '#EE8',
          '90': '#EE9',
          '00': '#EE0',
        },
        bg: { base: '#EE4', disabled: '#EE3', focused: '#EE5', hovered: '#EE6', selected: '#EE5' },
        fg: { base: '#EE4', disabled: '#EE3', focused: '#EE5', hovered: '#EE6', selected: '#EE5' },
      },
    },
  },
);
"
`;

exports[`Compiler compile() compiles multiple themes 3`] = `
"// Auto-generated by Aesthetic. Do not modify!
import parentTheme from './default';

export default parentTheme.extend(
  {
    palette: {
      brand: {
        color: {
          '10': '#BE1',
          '20': '#BE2',
          '30': '#BE3',
          '40': '#BE4',
          '50': '#BE5',
          '60': '#BE6',
          '70': '#BE7',
          '80': '#BE8',
          '90': '#BE9',
          '00': '#BE0',
        },
        bg: { base: '#BE4', disabled: '#BE3', focused: '#BE5', hovered: '#BE6', selected: '#BE5' },
        fg: { base: '#BE4', disabled: '#BE3', focused: '#BE5', hovered: '#BE6', selected: '#BE5' },
      },
      primary: {
        color: {
          '10': '#ff1',
          '20': '#ff2',
          '30': '#ff3',
          '40': '#ff4',
          '50': '#ff5',
          '60': '#ff6',
          '70': '#ff7',
          '80': '#ff8',
          '90': '#ff9',
          '00': '#ff0',
        },
        bg: { base: '#ff0', disabled: '#ff1', focused: '#ff5', hovered: '#ff2', selected: '#ff5' },
        fg: { base: '#ff9', disabled: '#ff4', focused: '#ff8', hovered: '#ff7', selected: '#ff7' },
      },
      secondary: {
        color: {
          '10': '#ED1',
          '20': '#ED2',
          '30': '#ED3',
          '40': '#ED4',
          '50': '#ED5',
          '60': '#ED6',
          '70': '#ED7',
          '80': '#ED8',
          '90': '#ED9',
          '00': '#ED0',
        },
        bg: { base: '#ED4', disabled: '#ED3', focused: '#ED5', hovered: '#ED6', selected: '#ED5' },
        fg: { base: '#ED4', disabled: '#ED3', focused: '#ED5', hovered: '#ED6', selected: '#ED5' },
      },
      tertiary: {
        color: {
          '10': '#BE1',
          '20': '#BE2',
          '30': '#BE3',
          '40': '#BE4',
          '50': '#BE5',
          '60': '#BE6',
          '70': '#BE7',
          '80': '#BE8',
          '90': '#BE9',
          '00': '#BE0',
        },
        bg: { base: '#BE4', disabled: '#BE3', focused: '#BE5', hovered: '#BE6', selected: '#BE5' },
        fg: { base: '#BE4', disabled: '#BE3', focused: '#BE5', hovered: '#BE6', selected: '#BE5' },
      },
      neutral: {
        color: {
          '10': '#EE1',
          '20': '#EE2',
          '30': '#EE3',
          '40': '#EE4',
          '50': '#EE5',
          '60': '#EE6',
          '70': '#EE7',
          '80': '#EE8',
          '90': '#EE9',
          '00': '#EE0',
        },
        bg: { base: '#EE4', disabled: '#EE3', focused: '#EE5', hovered: '#EE6', selected: '#EE5' },
        fg: { base: '#EE0', disabled: '#EE1', focused: '#EE4', hovered: '#EE3', selected: '#EE8' },
      },
      muted: {
        color: {
          '10': '#001',
          '20': '#002',
          '30': '#003',
          '40': '#004',
          '50': '#005',
          '60': '#006',
          '70': '#007',
          '80': '#008',
          '90': '#009',
          '00': '#000',
        },
        bg: { base: '#004', disabled: '#003', focused: '#005', hovered: '#006', selected: '#005' },
        fg: { base: '#004', disabled: '#003', focused: '#005', hovered: '#006', selected: '#005' },
      },
      info: {
        color: {
          '10': '#ff1',
          '20': '#ff2',
          '30': '#ff3',
          '40': '#ff4',
          '50': '#ff5',
          '60': '#ff6',
          '70': '#ff7',
          '80': '#ff8',
          '90': '#ff9',
          '00': '#ff0',
        },
        bg: { base: '#ff4', disabled: '#ff3', focused: '#ff5', hovered: '#ff6', selected: '#ff5' },
        fg: { base: '#ff4', disabled: '#ff3', focused: '#ff5', hovered: '#ff6', selected: '#ff5' },
      },
      warning: {
        color: {
          '10': '#ED1',
          '20': '#ED2',
          '30': '#ED3',
          '40': '#ED4',
          '50': '#ED5',
          '60': '#ED6',
          '70': '#ED7',
          '80': '#ED8',
          '90': '#ED9',
          '00': '#ED0',
        },
        bg: { base: '#ED9', disabled: '#ED9', focused: '#ED9', hovered: '#ED9', selected: '#ED9' },
        fg: { base: '#ED5', disabled: '#ED4', focused: '#ED6', hovered: '#ED7', selected: '#ED6' },
      },
      danger: {
        color: {
          '10': '#ED1',
          '20': '#ED2',
          '30': '#ED3',
          '40': '#ED4',
          '50': '#ED5',
          '60': '#ED6',
          '70': '#ED7',
          '80': '#ED8',
          '90': '#ED9',
          '00': '#ED0',
        },
        bg: { base: '#ED9', disabled: '#ED3', focused: '#ED5', hovered: '#ED6', selected: '#ED5' },
        fg: { base: '#ED0', disabled: '#ED4', focused: '#ED6', hovered: '#ED7', selected: '#ED6' },
      },
      success: {
        color: {
          '10': '#EE1',
          '20': '#EE2',
          '30': '#EE3',
          '40': '#EE4',
          '50': '#EE5',
          '60': '#EE6',
          '70': '#EE7',
          '80': '#EE8',
          '90': '#EE9',
          '00': '#EE0',
        },
        bg: { base: '#EE4', disabled: '#EE3', focused: '#EE5', hovered: '#EE6', selected: '#EE5' },
        fg: { base: '#EE4', disabled: '#EE3', focused: '#EE5', hovered: '#EE6', selected: '#EE5' },
      },
    },
  },
  {
    contrast: 'normal',
    scheme: 'light',
  },
);
"
`;
